edit post with alignment issue fixed

--- a/html/jumbotron-narrow.css
+++ b/html/jumbotron-narrow.css
@@ -26,15 +26,15 @@ body {
 
 /* Custom page footer */
 .footer {
-    padding-top: 19px;
+    padding-top: 319px;
     color: #777;
     border-top: 1px solid #e5e5e5;
 }
 
 /* Customize container */
-@media (min-width: 768px) {
+@media (min-width: 1000px) {
     .container {
-        max-width: 730px;
+        max-width: 1000px;
     }
 }
 .container-narrow > hr {
@@ -60,7 +60,7 @@ body {
 }
 
 /* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1000px) {
     /* Remove the padding we set earlier */
     .header,
     .marketing,
@@ -75,5 +75,13 @@ body {
     /* Remove the bottom border on the jumbotron for visual effect */
     .jumbotron {
         border-bottom: 0;
+    }
+}
+
+
+@media (min-width: 992px){
+    .col-md-5 {
+        width: 100%;
+        padding: 90px 21px 5px 0px;
     }
 }
